# serializer version: 1
# name: test_feature_spec_version_deterministic
  'eded67864d72c8aa6a753ec90f12371feb7c2200747672aaa80cb5d404a5324f'
# ---
# name: test_feature_spec_version_includes_all_properties
  '94f31edd238f91502dabe67679c38597242d3fcea87ba36aa0ccc106a83270c0'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': '72471e8bfba84439e4814b65bee1589a56f702592f4068ef30c61167bb6781aa',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_schema': dict({
      'properties': dict({
        'metaxy_created_at': dict({
          'anyOf': list([
            dict({
              'format': 'date-time',
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Timestamp when the metadata row was created (UTC)',
          'title': 'Metaxy Created At',
        }),
        'metaxy_data_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_data_version_by_field',
          'title': 'Metaxy Data Version',
        }),
        'metaxy_data_version_by_field': dict({
          'anyOf': list([
            dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'type': 'object',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Field-level data version hashes (maps field names to version hashes)',
          'title': 'Metaxy Data Version By Field',
        }),
        'metaxy_feature_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the feature definition (dependencies + fields + code_versions)',
          'title': 'Metaxy Feature Version',
        }),
        'metaxy_materialization_id': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'External orchestration run ID (e.g., Dagster Run ID)',
          'title': 'Metaxy Materialization Id',
        }),
        'metaxy_provenance': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_provenance_by_field',
          'title': 'Metaxy Provenance',
        }),
        'metaxy_provenance_by_field': dict({
          'additionalProperties': dict({
            'type': 'string',
          }),
          'description': 'Field-level provenance hashes (maps field names to hashes)',
          'title': 'Metaxy Provenance By Field',
          'type': 'object',
        }),
        'metaxy_snapshot_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the entire feature graph snapshot',
          'title': 'Metaxy Snapshot Version',
        }),
      }),
      'title': 'SnapshotFeature',
      'type': 'object',
    }),
    'feature_spec': dict({
      'deps': list([
      ]),
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'lineage': dict({
        'relationship': dict({
          'type': '1:1',
        }),
      }),
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': 'cc4b71667ebc22d4c7c90991c87fc89547645468b911e85a0f818d634b5c5303',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'metaxy_full_definition_version': '315eea6d509dedf5e3ebceff6c9733c9361efc9ce101bba4602b3ae0ce08efa6',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '10e301186731f6b21b28148d88bcb3bf5d9474951bae3091139f38839bd3d15a'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  'd4f1d3b37efdcdedacfc0a087f22627b00f151cc8ef19295579767dae03f055c'
# ---
